Changelog for mk-query-digest:

   * Database wasn't printed in SHOW CREATE TABLE/SHOW TABLE STATUS (issue 290).
   * "--report tables" will now print "SHOW CREATE..." etc (issue 287).
   * Some long queries were not shortened (issue 292).
   * INSERT/ON DUPLICATE KEY UPDATE caused extra tables to be found (issue 291).
   * Changed the --truncateinsert option to --shorten (issue 292).
   * Added --explain to print the EXPLAIN in the report (issue 199).
   * Added 'bytes' property to log events (issue 247).
   * Some INSERT/REPLACE queries were not truncated (issue 216).
   * INSERT/REPLACE were needlessly converted for EXPLAIN (issue 283).
   * SELECTs starting with a comment were converted for EXPLAIN (issue 252).
   * Added informational text to show why items are reported on (issue 282).
   * IN() lists were parsed as table names (issue 277).
   * The parser crashed on some logs from Windows servers (issue 267).
   * Added the ability to parse embedded attributes (issue 177).
   * Log entries without a Time property crashed --review (issue 263).
   * All-zero timestamps displayed in unwanted places (issue 202).

2009-02-01: version 0.9.2

   * Renamed from mk-log-parser to mk-query-digest.
   * Added the --timeline option (issue 254).
   * Added the ability to analyze with --groupby distill (issue 254).
   * Added the ability to analyze with --groupby tables (issue 230).
   * Table names with reserved words weren't recognized (issue 209).
   * Changed the names of options --top, --analyze, --worst, etc.
   * Added the ability to aggregate the log multiple ways (issue 176).
   * Rewrote internals to aid in other projects (partial work on issue 242).
   * Made the SHOW CREATE/SHOW STATUS have the sample query's DB (issue 213).
   * Added more information to the global header (issue 200).
   * Reformatted the query report header (issue 205).
   * Added the --outliers option (issue 171).
   * Added the --mirror option (issue 236).